--- a/.env
+++ b/.env
@@ -1,20 +1,20 @@
 APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=base64:D6zSK4h8WiYjJd/R0A/cVLhXtTIJ835nkuohH3P8eOc=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://test.abebot.com
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-#DB_CONNECTION=mysql
+DB_CONNECTION=mysql
 DB_HOST=localhost
-#DB_PORT=3306
-#DB_DATABASE=homestead
-#DB_USERNAME=homestead
-#DB_PASSWORD=secret
-DB_CONNECTION = sqlite    
+DB_PORT=3306
+DB_DATABASE=test_ento
+DB_USERNAME=test_ento
+DB_PASSWORD=
+#DB_CONNECTION = sqlite    
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
